$Id$


****************************** DRUPAL 7 - 2.x BRANCH ********************************

February 02,2011
----------------
#1048606 by troky: Fixed missing title/link to the last post.

February 01,2011
----------------
#1045200 by troky: Fixed 'reply_link' variable initialization in advanced_forum_preprocess_comment_wrapper().

January 31, 2011
----------------
#1046436 by troky: Fixed duplicate comment text.

January 29, 2011
----------------
#1044082 by troky: Fixed node templates to show all fields, not only body text.
NOISSUE by troky: Fixed line breaks in template_preprocess_advanced_forum_topic_list_view.

January 29, 2011
----------------
NOISSUE by troky: Fixed wrongly constructed query in advanced_forum_unread_replies_in_forum().
#1042636 by troky: Fixed Forum Access module compatibility.

January 28, 2011
----------------
#1042664 by troky: Fixed variable name mismatch in advanced_forum_statistics_replies().
#1031712 by troky: Improved CSS to give structure to empty forums.
#1041426 by __Sander__: Wrapped forum tools menu items in t().

January 27, 2011
----------------
#1041128 by troky: Fixed PHP 5.3 strict warnings.
#992428 by Michelle: Fixed mark as read so it's not displayed on containers.

January 26, 2011
----------------
#935778 by troky, Michelle: Remove 'views' column when statistics not enabled.
NOISSUE by Michelle: Removed topic icon from unsanswered view as it caused notices and served no purposes.
#1031712 by Michelle: Gave structure to topic list empty view div to avoid layout issues when there are no topics in a forum.
#1001524 by Michelle: Created content types for forum tools and node create list.
#935322 / #1001524 by Michelle Got PM version in sync with non PM version.
#1031712 by troky: Fixed parsing of advanced_forum_forum_disabled variable.
#1040958 by troky: Fixed deleting all module variables in advanced_forum_uninstall()
NOISSUE by troky: Fixed formatting of some files, mostly newline characters.