@@ -12,7 +12,6 @@
 function advanced_forum_page($forum_term = NULL) {
   if (!isset($forum_term)) {
     // On the main page, display all the top-level forums.
-		// Using core forum call because of performance reasons.
     $forum_term = advanced_forum_forum_load(0);
   }
 
