@@ -2,6 +2,7 @@
 td.forum-icon {
   vertical-align: middle;
   text-align: center;
+  width: 70px;
 }
 
 .forum-icon-wrapper span {
