@@ -84,7 +84,7 @@ th.forum-name {
 }
 
 td.forum-details {
-  width: 50%;
+
 }
 
 td.forum-details .forum-description {
@@ -124,7 +124,7 @@ td.forum-last-reply {
 }
 
 .forum-table-topics td.views-field-title {
-  width: 50%;
+  
 }
 
 .forum-table-topics td.views-field-comment-count,
